--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gswarm-api",
   "displayName": "GSwarm API",
   "description": "Gemini Swarm API Proxy",
-  "version": "v101",
+  "version": "1.0.2",
   "publisher": "bosmadev",
   "private": true,
   "repository": {
@@ -12,9 +12,9 @@
   "type": "module",
   "scripts": {
     "############ SERVER ############": "",
-    "dev": "next dev --turbopack --port 3001",
+    "dev": "next dev --turbopack --port 3001 2>&1 | tee -a error.log",
     "start": "next start --port 3001",
-    "launch": "tsx scripts/launch.ts",
+    "launch": "tsx scripts/launch.ts 2>&1 | tee -a error.log",
     "launch:debug": "DEBUG=true tsx scripts/launch.ts",
     "launch:tunnel": "cloudflared tunnel run gswarm-api",
     "gswarm": "GSWARM_CLI=true tsx lib/gswarm/cli.ts",
@@ -73,10 +73,6 @@
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-navigation-menu": "^1.2.14",
-    "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-radio-group": "^1.3.8",
-    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slider": "^1.3.6",
@@ -150,11 +146,12 @@
     ],
     "ignore": [
       "components/ui/**",
-      "components/providers/**",
-      "components/topbar/**",
-      "lib/**",
       "scripts/launch.ts",
-      "scripts/test-api-keys.ts"
+      "scripts/test-api-keys.ts",
+      "lib/console.ts",
+      "lib/gswarm/storage/**",
+      "lib/gswarm/projects.ts",
+      "lib/gswarm/oauth.ts"
     ],
     "ignoreDependencies": [
       "zod",
@@ -173,10 +170,6 @@
       "@radix-ui/react-hover-card",
       "@radix-ui/react-icons",
       "@radix-ui/react-label",
-      "@radix-ui/react-navigation-menu",
-      "@radix-ui/react-popover",
-      "@radix-ui/react-radio-group",
-      "@radix-ui/react-scroll-area",
       "@radix-ui/react-select",
       "@radix-ui/react-separator",
       "@radix-ui/react-slider",
@@ -190,7 +183,18 @@
       "class-variance-authority",
       "date-fns",
       "react-day-picker",
-      "react-hook-form"
+      "react-hook-form",
+      "mermaid",
+      "shiki",
+      "clsx",
+      "tailwind-merge",
+      "node-cron",
+      "react-markdown",
+      "rehype-raw",
+      "remark-gfm",
+      "tailwindcss",
+      "tailwindcss-animate",
+      "@types/node-cron"
     ],
     "rules": {
       "exports": "warn"
