--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "nextjs-bosmadev"
-version = "v101"
+version = "1.0.2"
 description = "Python components for Next.js Template"
 readme = "README.md"
 requires-python = ">=3.13"
