fix: sync changelog.ts/claude.yml from cwchat, add noConsole override
- changelog.ts: biome formatting fix (multi-line spawnSync options)
- claude.yml: per-job concurrency (changelog queues, review cancels)
- biome.jsonc: add .github/changelog.ts to noConsole override

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -54,7 +54,8 @@
       "includes": [
         "lib/console.ts",
         "scripts/launch.ts",
-        "python/sync-pyproject.ts"
+        "python/sync-pyproject.ts",
+        ".github/changelog.ts"
       ],
       "linter": {
         "rules": {
