--- a/.github/workflows/reset-dev.yml
+++ b/.github/workflows/reset-dev.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/checkout@v5
         with:
           fetch-depth: 0
+          token: ${{ secrets.ADMIN_TOKEN }}
       - name: Reset dev branch to main
         run: |
           BRANCH="${{ github.event.pull_request.head.ref }}"
@@ -27,3 +28,28 @@ jobs:
           git reset --hard origin/main
           git push --force origin "$BRANCH"
           echo "✓ $BRANCH reset to main"
+
+  reset-night-dev:
+    if: >-
+      github.event.pull_request.merged == true &&
+      endsWith(github.event.pull_request.head.ref, '-night-dev')
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.ADMIN_TOKEN }}
+      - name: Reset night-dev branch to dev
+        run: |
+          BRANCH="${{ github.event.pull_request.head.ref }}"
+          BASE_BRANCH="${{ github.event.pull_request.base.ref }}"
+          echo "Resetting $BRANCH to match $BASE_BRANCH..."
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git fetch origin "$BRANCH"
+          git checkout "$BRANCH"
+          git reset --hard "origin/$BASE_BRANCH"
+          git push --force origin "$BRANCH"
+          echo "✓ $BRANCH reset to $BASE_BRANCH"
