--- a/package.json
+++ b/package.json
@@ -52,8 +52,6 @@
     "env:encrypt": "dotenvx encrypt",
     "env:decrypt": "dotenvx decrypt",
     "env:check": "node -e \"const f=require('fs').readFileSync('.env','utf8'); process.exit(f.includes('encrypted:') ? (console.log('✅ .env encrypted'),0) : (console.log('❌ .env NOT encrypted'),1))\"",
-    "env:backup": "node -e \"const k=require('fs').readFileSync('.env.keys','utf8').match(/DOTENV_PRIVATE_KEY=(.+)/)?.[1]; if(!k){console.error('❌ No .env.keys found');process.exit(1)} require('child_process').execSync('gh secret set DOTENV_PRIVATE_KEY --body '+k,{stdio:'inherit'}); console.log('✅ Backed up to GitHub Secrets')\"",
-    "env:restore": "node -e \"const {execSync}=require('child_process'); console.log('Triggering restore workflow...'); execSync('gh workflow run restore-env-keys.yml',{stdio:'inherit'}); console.log('⏳ Workflow triggered. Run: gh run watch && gh run download -n env-keys && mv env-keys.txt .env.keys')\"",
     "prepare": "husky"
   },
   "dependencies": {
@@ -90,6 +88,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "ioredis": "^5.9.3",
     "lucide-react": "^0.562.0",
     "mermaid": "^11.12.2",
     "next": "^16.1.2",
@@ -112,6 +111,7 @@
     "@biomejs/biome": "^2.3.10",
     "@dotenvx/dotenvx": "^1.51.4",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/ioredis": "^5.0.0",
     "@types/node": "^25.0.3",
     "@types/node-cron": "^3.0.11",
     "@types/react": "^19.2.7",
