feat(storage): migrate to Redis + fix P1 review findings
- Replace file-based storage with ioredis (Upstash Redis)
- Add JSON.parse safety wrappers in all storage modules
- Register SIGTERM/SIGINT shutdown handlers for Redis
- Export shutdownRedis from facade
- Fix knip: remove @types/ioredis, configure script entries
- Add biome overrides for standalone scripts and redis.ts
- Apply unsafe biome fixes to tests and codebase
- Fix Husky pre-commit shebang

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "gswarm-api"
-version = "1.0.2"
+name = "gswarm"
+version = "1.0.3"
 description = "Gemini Swarm API Proxy"
 readme = "README.md"
 requires-python = ">=3.13"
