--- a/biome.jsonc
+++ b/biome.jsonc
@@ -53,7 +53,11 @@
     {
       "includes": [
         "lib/console.ts",
+        "lib/gswarm/storage/redis.ts",
         "scripts/launch.ts",
+        "scripts/migrate-to-redis.ts",
+        "scripts/populate-token-projects.ts",
+        "scripts/run-integration-tests.ts",
         "python/sync-pyproject.ts",
         ".github/changelog.ts"
       ],
