--- a/package.json
+++ b/package.json
@@ -111,7 +111,6 @@
     "@biomejs/biome": "^2.3.10",
     "@dotenvx/dotenvx": "^1.51.4",
     "@tailwindcss/postcss": "^4.1.18",
-    "@types/ioredis": "^5.0.0",
     "@types/node": "^25.0.3",
     "@types/node-cron": "^3.0.11",
     "@types/react": "^19.2.7",
@@ -152,6 +151,9 @@
     "ignore": [
       "components/ui/**",
       "scripts/launch.ts",
+      "scripts/migrate-to-redis.ts",
+      "scripts/populate-token-projects.ts",
+      "scripts/run-integration-tests.ts",
       "lib/console.ts",
       "lib/gswarm/storage/**",
       "lib/gswarm/schemas.ts",
