--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "############ SERVER ############": "",
     "dev": "dotenvx run -- node --input-type=commonjs -e \"process.env.PORT=process.env.GLOBAL_PORT||'3000';require('child_process').execSync('next dev --turbopack',{stdio:'inherit',shell:true})\"",
+    "dev:debug": "node --experimental-transform-types scripts/launch.ts --debug",
     "start": "dotenvx run -- node --input-type=commonjs -e \"process.env.PORT=process.env.GLOBAL_PORT||'3000';require('child_process').execSync('next start',{stdio:'inherit',shell:true})\"",
     "launch": "node --experimental-transform-types scripts/launch.ts",
     "launch:debug": "DEBUG=true node --experimental-transform-types scripts/launch.ts",
