--- a/package.json
+++ b/package.json
@@ -58,10 +58,10 @@
     "node": ">=22.6.0"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "^1.51.4",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@dotenvx/dotenvx": "^1.51.4",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -119,6 +119,7 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/coverage-v8": "^4.0.18",
     "@vitest/ui": "^4.0.16",
     "autoprefixer": "^10.4.23",
     "babel-plugin-react-compiler": "^1.0.0",
@@ -163,7 +164,8 @@
       "lib/gswarm/errors.ts",
       "lib/gswarm/projects.ts",
       "lib/gswarm/oauth.ts",
-      "scripts/reactgrab-patch.cjs"
+      "scripts/reactgrab-patch.cjs",
+      "app/api/gswarm/_shared/streaming.ts"
     ],
     "ignoreDependencies": [
       "zod",
