config: sync .github templates from source-of-truth
- Update CODEOWNERS, bug_report.md, feature_request.md from ~/.claude

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,2 @@
-# This repository is maintained by @bosmadev
-# All files are owned by the repository owner
+# All files require owner approval for any PR
 * @bosmadev
