config: unify gitignore and reactgrab-patch with canonical format
- Remove .env from gitignore (encrypted .env is committed)
- Add data/ and runtime patterns
- Update reactgrab-patch.cjs (7-function coverage, arrow style)

--- a/.gitignore
+++ b/.gitignore
@@ -2,29 +2,32 @@
 .vscode/
 node_modules/
 .next/
+out/
 .cache/
 temp/
+tmp/
 .claude/*
 !.claude/
 .serena/
+test-results/
+coverage/
+
+# Python
 __pycache__/
+*.py[codz]
 .venv/
 .pytest_cache/
-tmp/
-test-results/
 
 # Runtime data (tokens, sessions, metrics)
 data/
 
 # Files
 !.gitkeep
-.mcp.json
-.env
-.env.local
 .env.keys
-tsconfig.tsbuildinfo
+.env.local
+.mcp.json
+*.tsbuildinfo
 next-env.d.ts
 *.log
 .server.pid
 nul
-
